--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <p class="msg">Winner</p> 
         <button class="new_btn">New Game</button>
     </div>
+    <div class="scoreboard">
+        <p id="score-o">Player O: 0</p>
+        <p id="score-x">Player X: 0</p>
+    </div>
     <div class="container" >
         <div class="game">
             <button class="box"></button> 
