--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Tic Tac Toe</h1>
+    <h1 class="game_name" >Tic Tac Toe</h1>
     <div class="msg_container hide">
         <p class="msg">Winner</p> 
         <button class="new_btn">New Game</button>
